# ImageProcessor

./: .gitignore  CMakeLists.txt  README.md  image-processing  main.cpp  ui.glade
gui_src/: Builder.cpp  Builder.h  GUI.cpp  GUI.h
img_processing_src/: Image.cpp  Image.h  Watermark.cpp  Watermark.h
